2002-02-29 Baptiste Lepilleur <gaiacrtn@free.fr>

	* inclued/cppunit/XmlOutputter.h:
	* inclued/cppunit/XmlOutputter.cpp: added optional parameter to constructor
	to specify the encoding.

	* configure.in: updated version number to 1.7.3

2002-02-28 Baptiste Lepilleur <gaiacrtn@free.fr>

	* NEW: updated and restructured.

	* include/cppunit/CompilerOutputter.h: 
	* src/cppunit/CompilerOutputter.cpp: 
	updated against TestResultChange. Changed TestResult to TestResultCollector.

	* include/cppunit/extensions/HelperMacros.h: minor documentation fix.

	* include/cppunit/Outputter.h: added. Abstract base class for all Outputter.

	* include/cppunit/Portability.h: made the fix on OStringStream suggested by
	Bob Summerwill to remove level 4 warning with VC++.

	* include/cppunit/TestAssert.h: added macro CPPUNIT_ASSERT_EQUAL_MESSAGE.

	* src/cppunit/TestFailure.cpp:
	* include/cppunit/TestFailure.h: added method clone() to duplicate a failure. Made
	all method virtual.

	* include/cppunit/TestListener.h: changed signature of addFailure() to
	addFailure( const TestFailure &failure ). Failure is now only a temporary object.

	* include/cppunit/Outputter.h: added. Abstract base class for all outputter. Used
	by TextTestRunner.

	* include/cppunit/SynchronizedObject.h:
	* src/cppunit/SynchronizedObject.cpp: added. Class extracted from TestResult.
	Base class for objects that can be accessed from different threads.

	* include/cppunit/TestResult.h: TestFailure.h is no longer included.

	* include/cppunit/TestResult.h: 
	* src/cppunit/TestResult.cpp: extracted all methods related to keeping track
	of the result to the new TestResultCollector class which is a TestListener.

	* include/cppunit/TestResultCollector.h: 
	* src/cppunit/TestResultCollector.cpp: added. TestListener which kept track
	of the result of the test run. All failure/error, and tests are tracked.

	* include/cppunit/TestSucessListener.h:
	* src/cppunit/TestSucessListener.cpp: added. TestListener extracted from