@@ -1,6 +1,9 @@
 * CppUnit:
   - Unicode support
   - STL orthodox template for container elements.
+  - CompilerOutputter support for gcc error format:
+	g++ -DHAVE_CONFIG_H -I. -I. -I../../config -I../../include -I../../include -g -O2 -c TextOutputter.cpp -Wp,-MD,.deps/TextOutputter.TPlo  -fPIC -DPIC
+	TextOutputter.cpp:5: cppunit/TextOutputter.h: No such file or directory
 
 * VC++ TestRunner:
   - Make it possible to specify the registry path where settings are stored.
